// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform-content returns the correct html from AsciiDoc for .adoc with a title and a link 1`] = `
<html lang="en"
      style="min-height:100vh"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.adoc
    </title>
    <link rel="stylesheet"
          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
          crossorigin="anonymous"
    >
  </head>
  <body style="min-height:100vh">
    <div style="min-height:75vh;padding-bottom:20px">
      <div class="container"
           style="border:none;border-radius:0;background-color:#000;height:60px;margin-bottom:0;width:100%;padding-right:5px;padding-left:5px"
      >
        <div class="row col-md-12"
             style="width:100%;padding-top:10px;padding-right:0px;padding-left:25px"
        >
          <div class="col-md-4"
               style="margin-top:5px"
          >
            <a style="text-align:left;padding-right:3px;color:#4f8df0;font-size:20"
               href="/file-name.adoc"
            >
              <span>
                /file-name.adoc
              </span>
            </a>
          </div>
        </div>
      </div>
      <div class="container">
        <div class="sect1">
          <h2 id="_title_of_simple_content_adoc">
            Title of simple-content.adoc
          </h2>
          <div class="sectionbody">
            <div class="paragraph">
              <p>
                <a href="docs/file-to-publish.md">
                  Link to MD in docs directory
                </a>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;padding:0 15px;box-sizing:border-box;min-height:25vh;position:relative"
            class="footer"
    >
      <div style="padding:1em 0 2em 0"
           class="container"
      >
        <div class="row">
          <div style="text-align:center"
               class="col-md-4 col-md-offset-4"
          >
            <h3>
              What is Morty-Docs?
            </h3>
            <p>
              Link to
              <a href="https://github.com/bbc/morty-docs">
                Morty-docs
              </a>
              .
            </p>
          </div>
        </div>
      </div>
    </footer>
  </body>
</html>
`;

exports[`Transform-content returns the correct html from AsciiDoc for .asc with a title and a link 1`] = `
<html lang="en"
      style="min-height:100vh"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.asc
    </title>
    <link rel="stylesheet"
          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
          crossorigin="anonymous"
    >
  </head>
  <body style="min-height:100vh">
    <div style="min-height:75vh;padding-bottom:20px">
      <div class="container"
           style="border:none;border-radius:0;background-color:#000;height:60px;margin-bottom:0;width:100%;padding-right:5px;padding-left:5px"
      >
        <div class="row col-md-12"
             style="width:100%;padding-top:10px;padding-right:0px;padding-left:25px"
        >
          <div class="col-md-4"
               style="margin-top:5px"
          >
            <a style="text-align:left;padding-right:3px;color:#4f8df0;font-size:20"
               href="/file-name.asc"
            >
              <span>
                /file-name.asc
              </span>
            </a>
          </div>
        </div>
      </div>
      <div class="container">
        <div class="sect1">
          <h2 id="_title_of_simple_content_asc">
            Title of simple-content.asc
          </h2>
          <div class="sectionbody">
            <div class="paragraph">
              <p>
                <a href="docs/file-to-publish.md">
                  Link to MD in docs directory
                </a>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;padding:0 15px;box-sizing:border-box;min-height:25vh;position:relative"
            class="footer"
    >
      <div style="padding:1em 0 2em 0"
           class="container"
      >
        <div class="row">
          <div style="text-align:center"
               class="col-md-4 col-md-offset-4"
          >
            <h3>
              What is Morty-Docs?
            </h3>
            <p>
              Link to
              <a href="https://github.com/bbc/morty-docs">
                Morty-docs
              </a>
              .
            </p>
          </div>
        </div>
      </div>
    </footer>
  </body>
</html>
`;

exports[`Transform-content returns the correct html from AsciiDoc for .asciidoc with a title and a link 1`] = `
<html lang="en"
      style="min-height:100vh"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.asciidoc
    </title>
    <link rel="stylesheet"
          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
          crossorigin="anonymous"
    >
  </head>
  <body style="min-height:100vh">
    <div style="min-height:75vh;padding-bottom:20px">
      <div class="container"
           style="border:none;border-radius:0;background-color:#000;height:60px;margin-bottom:0;width:100%;padding-right:5px;padding-left:5px"
      >
        <div class="row col-md-12"
             style="width:100%;padding-top:10px;padding-right:0px;padding-left:25px"
        >
          <div class="col-md-4"
               style="margin-top:5px"
          >
            <a style="text-align:left;padding-right:3px;color:#4f8df0;font-size:20"
               href="/file-name.asciidoc"
            >
              <span>
                /file-name.asciidoc
              </span>
            </a>
          </div>
        </div>
      </div>
      <div class="container">
        <div class="sect1">
          <h2 id="_title_of_simple_content_asciidoc">
            Title of simple-content.asciidoc
          </h2>
          <div class="sectionbody">
            <div class="paragraph">
              <p>
                <a href="docs/file-to-publish.md">
                  Link to MD in docs directory
                </a>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;padding:0 15px;box-sizing:border-box;min-height:25vh;position:relative"
            class="footer"
    >
      <div style="padding:1em 0 2em 0"
           class="container"
      >
        <div class="row">
          <div style="text-align:center"
               class="col-md-4 col-md-offset-4"
          >
            <h3>
              What is Morty-Docs?
            </h3>
            <p>
              Link to
              <a href="https://github.com/bbc/morty-docs">
                Morty-docs
              </a>
              .
            </p>
          </div>
        </div>
      </div>
    </footer>
  </body>
</html>
`;

exports[`Transform-content returns the correct html from AsciiDoc for a line of plain text 1`] = `
<html lang="en"
      style="min-height:100vh"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.asciidoc
    </title>
    <link rel="stylesheet"
          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
          crossorigin="anonymous"
    >
  </head>
  <body style="min-height:100vh">
    <div style="min-height:75vh;padding-bottom:20px">
      <div class="container"
           style="border:none;border-radius:0;background-color:#000;height:60px;margin-bottom:0;width:100%;padding-right:5px;padding-left:5px"
      >
        <div class="row col-md-12"
             style="width:100%;padding-top:10px;padding-right:0px;padding-left:25px"
        >
          <div class="col-md-4"
               style="margin-top:5px"
          >
            <a style="text-align:left;padding-right:3px;color:#4f8df0;font-size:20"
               href="/file-name.asciidoc"
            >
              <span>
                /file-name.asciidoc
              </span>
            </a>
          </div>
        </div>
      </div>
      <div class="container">
        <div class="paragraph">
          <p>
            One line of plain text
          </p>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;padding:0 15px;box-sizing:border-box;min-height:25vh;position:relative"
            class="footer"
    >
      <div style="padding:1em 0 2em 0"
           class="container"
      >
        <div class="row">
          <div style="text-align:center"
               class="col-md-4 col-md-offset-4"
          >
            <h3>
              What is Morty-Docs?
            </h3>
            <p>
              Link to
              <a href="https://github.com/bbc/morty-docs">
                Morty-docs
              </a>
              .
            </p>
          </div>
        </div>
      </div>
    </footer>
  </body>
</html>
`;

exports[`Transform-content returns the correct html from markdown for Markdown with a title and links 1`] = `
<html lang="en"
      style="min-height:100vh"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.md
    </title>
    <link rel="stylesheet"
          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
          crossorigin="anonymous"
    >
  </head>
  <body style="min-height:100vh">
    <div style="min-height:75vh;padding-bottom:20px">
      <div class="container"
           style="border:none;border-radius:0;background-color:#000;height:60px;margin-bottom:0;width:100%;padding-right:5px;padding-left:5px"
      >
        <div class="row col-md-12"
             style="width:100%;padding-top:10px;padding-right:0px;padding-left:25px"
        >
          <div class="col-md-4"
               style="margin-top:5px"
          >
          </div>
        </div>
      </div>
      <div class="container">
        <h1 id="title-of-simple-contentmd">
          <a href="#title-of-simple-contentmd">
            Title of simple-content.md
          </a>
        </h1>
        <p>
          <a href="docs/file-to-publish.html">
            Relative link to MD in docs directory
          </a>
          <br>
          <a href="/morty-docs/some-repo/docs/file-to-publish.html">
            Root link to MD in docs directory
          </a>
        </p>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;padding:0 15px;box-sizing:border-box;min-height:25vh;position:relative"
            class="footer"
    >
      <div style="padding:1em 0 2em 0"
           class="container"
      >
        <div class="row">
          <div style="text-align:center"
               class="col-md-4 col-md-offset-4"
          >
            <h3>
              What is Morty-Docs?
            </h3>
            <p>
              Link to
              <a href="https://github.com/bbc/morty-docs">
                Morty-docs
              </a>
              .
            </p>
          </div>
        </div>
      </div>
    </footer>
  </body>
</html>
`;

exports[`Transform-content returns the correct html from markdown for a line of plain text 1`] = `
<html lang="en"
      style="min-height:100vh"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.md
    </title>
    <link rel="stylesheet"
          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
          crossorigin="anonymous"
    >
  </head>
  <body style="min-height:100vh">
    <div style="min-height:75vh;padding-bottom:20px">
      <div class="container"
           style="border:none;border-radius:0;background-color:#000;height:60px;margin-bottom:0;width:100%;padding-right:5px;padding-left:5px"
      >
        <div class="row col-md-12"
             style="width:100%;padding-top:10px;padding-right:0px;padding-left:25px"
        >
          <div class="col-md-4"
               style="margin-top:5px"
          >
          </div>
        </div>
      </div>
      <div class="container">
        <p>
          One line of plain text
        </p>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;padding:0 15px;box-sizing:border-box;min-height:25vh;position:relative"
            class="footer"
    >
      <div style="padding:1em 0 2em 0"
           class="container"
      >
        <div class="row">
          <div style="text-align:center"
               class="col-md-4 col-md-offset-4"
          >
            <h3>
              What is Morty-Docs?
            </h3>
            <p>
              Link to
              <a href="https://github.com/bbc/morty-docs">
                Morty-docs
              </a>
              .
            </p>
          </div>
        </div>
      </div>
    </footer>
  </body>
</html>
`;
